# broodforge

./: .gitattributes  .gitignore  .rhiz-lint.json  .secrets.baseline  ARCHITECTURE.md  CURRENT_STATE.md  README.html  README.md  ROADMAP.html  ROADMAP.md  _patch_dim_logic.py  _patch_transparent2.py  _patch_transparent3.py  pyproject.toml
.ai/: AI_AGENT_BOOTSTRAP.md  CURRENT_STATE.md  CURRENT_STATE_LEGACY.md  DESIGN_PRINCIPLES.md  IMPLEMENTATION_RULES.md  NEXT_STEPS.md  PROJECT_CHARTER.md  axiomatic-system-proposal.md  context.md  decisions.md  pap-audit-2026-06-08-r2.md  pap-audit-2026-06-08-r4.md  pap-audit-2026-06-09-r8.md  pap-audit-2026-06-09-r9.md
assessment/tier1/: analyze.py  bootstrap.sh
collector/: README.md
config/openbao-policies/: forge-autonomous.hcl  forge-migrate.hcl  forge-spawn.hcl
data-model/: bootstrap-state-schema.json  capability-state-schema.json  cell-identity-schema.json  cluster-state-schema.json  configured-state-schema.json  declared-state-schema.json  federation-state-schema.json  forge-manifest-schema.json  hardware-state-schema.json  historical-state-schema.json  network-topology-schema.json  observed-state-schema.json  phoenix-playbook-schema.json  platform-state-schema.json  recovery-state-schema.json  secret-reference-state-schema.json  service-state-schema.json  storage-state-schema.json  validate.py
deprecated/: DESIGN_NEXT_MILESTONE.md  README.md
doc-gen/: analyzers.py  dependencies.py  drift.py  engine.py  provenance.py  readiness.py  readiness_report.py  registries.py  template_registry.py
doc-gen/field-maps/: bootstrap-fields.yaml
doc-gen/renderers/: html_base.py  html_recovery_workbook.py  recovery_runbook.py  runbook.py  workbook.py
docs/: ABOUT-DOCS.html  ARCHITECTURE-REVIEW-v4.md  ARCHITECTURE-REVIEW-v5.md  ARCHITECTURE.html  AUDIT-FINDINGS.html  AUDIT-FINDINGS.md  CLOUD-STORAGE-SETUP.html  CLOUDFLARE-SETUP.html  CLOUDFLARE-SETUP.md  DESIGN-HISTORY.html  DOCS-INDEX.html  DUCKDNS-SETUP.html  DUCKDNS-SETUP.md  FEATURE-HISTORY.html  FEATURE-HISTORY.md  FORGING.html  HASHICORP-GAP-ANALYSIS.md  MILESTONE-5-DESIGN.md  NODE-SPAWNING.html  PHASE3-PLAN-ADDENDUM.md  PHASE3-PLAN.md  PHOENIX.html  PHOENIX.md  README.html  RECONSTRUCTION-DRILL.html  RECONSTRUCTION-DRILL.md  ROADMAP.html  SESSION-HANDOFF.md  SETUP-GUIDE.html  SNIPPET-UPLOAD.html  TALOS-ALTERNATIVE.html  TALOS-ALTERNATIVE.md  TIER2-COLLECTION.html  USER-REGISTRY.html  USER-REGISTRY.md  bfvault.html
docs/deprecated/: SESSION-HANDOFF.md
engine/: analyze.py  cli.py  report_compare.py  report_guest.py  schema.py
engine/modules/: guest_parser.py  hardware_parser.py
history/: index.json  index.py
lib/: forge-onboarding-pdf.py  forge-render-docs.py  forge-sync-lib.py  passphrase.py  pve-suppress-nag.sh
migrations/: README.md  migrate_0.0_to_1.0.py  migrate_initial__to__2026-06-09_00-00-00_0000000.py
pap/audits/: 2026-06-07_broodforge-pap-audit.md
pap/revisions/: 2026-06-07_session-continuity-transition-to-pap.md
pap/state/: RESUME_BLOCK.md  SESSION_HANDOFF.md
proxmox-bootstrap/: FORGING.html  FORGING.md  NODE-SPAWNING.html  NODE-SPAWNING.md  README.md  _image_builder.py  _recovery_accounts.py  _recovery_readiness_certificate.py  _vault_hierarchy.py  assemble-forge-package.py  assemble-phoenix-package.py  assemble-spawn-package.py  assemble_forge_package.py  assemble_phoenix_package.py  assemble_spawn_package.py  authorize-spawn-media-join.py  backup.py  backup_engine.py  backup_manager.py  bootstrap_state.py  broodforge_dashboard.py  capability_state.py  capacity_collector.py  cert_manager.py  cluster_state_collector.py  collect_tier2.py  collector_utils.py  continuous_assessment.py  credential_hierarchy.py  data_protection_collector.py  derive-scoped-vault.py  dns-registry.yaml  doc-manifest.json  failure_domain.py  failure_package_analyzer.py  federated_reconstruction.py  federation_docs.py  federation_state.py  flux_manager.py  forge-image-builder.html  (+90 more)
proxmox-bootstrap/deprecated/: forge_workbook.py  spawn_workbook.py
proxmox-bootstrap/discovery/: discover.py
proxmox-bootstrap/generators/: ansible-inventory-gen.py  cloud-init-gen.py  flux-bootstrap-gen.py  k3s-config-gen.py  tofu-vars.py
proxmox-bootstrap/images/: registry.yaml
rhiz-memory/: _instance.md
schemas/: assessment.schema.json  declared_resource.schema.json  guest.schema.json
scripts/: forge-add-longhorn-disk.sh  forge-backup-scheduled.sh  forge-backup.sh  forge-build-node-iso.sh  forge-flux-reconcile.sh  forge-init-cert-manager.sh  forge-init-credential-hierarchy.sh  forge-init-flux.sh  forge-init-ingress.sh  forge-init-longhorn.sh  forge-init-openbao.sh  forge-install-hooks.sh  forge-list-backups.sh  forge-migrate.sh  forge-offboard-user.sh  forge-onboard-user.sh  forge-phoenix-pack.sh  forge-plan-nodes.sh  forge-quiesce.sh  forge-register-ingress.sh  forge-render-docs.sh  forge-restore.sh  forge-resume.sh  forge-rotate-credential.sh  forge-rotate-tls-cert.sh  forge-stamp-state.sh  forge-stamp-version.sh  forge-sync-credentials.sh  forge-throw-away-key.sh  forge-verify-package.sh  forge-verify-state.sh  setup-dashboard-service.sh
tests/: test_cli.py  test_code_health.py  test_collector_framework.py  test_guest.py  test_history.py  test_opentofu.py  test_parser.py  test_parsers.py  test_repo.py  test_reports.py
tools/: remove_syspath_from_tests.py  run-static-audit.sh
(+159 files in other folders)
