[project]
name = "broodforge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.2",
]

[project.scripts]
pae = "engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    # static analysis tools — run via tools/run-static-audit.sh or individually
    "ruff>=0.4",
    "bandit>=1.7",
    "vulture>=2.11",
    "detect-secrets>=1.4",
    # shellcheck-py provides a Python shim used by tests/static/test_shellcheck.py
    "shellcheck-py>=0.9",
    # dynamic analysis tools — Phase 1.M
    "hypothesis>=6.100",         # property-based and fuzz testing of pure logic
    "mutmut>=2.0",               # mutation testing — verify tests catch bugs
    "beartype>=0.18",            # runtime type verification as pytest plugin
    "deal>=4.24",                # contract-based pre/postcondition decorators
    "schemathesis>=3.0",         # property-based HTTP API testing
    # atheris (Google coverage-guided fuzzer) is Linux-only; install separately on Linux:
    #   pip install atheris   (requires libFuzzer — Linux x86-64 only)
    # bats (Bash Automated Testing System) is installed via OS package manager:
    #   apt install bats  |  brew install bats-core
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "collector*"]

[tool.pytest.ini_options]
# Default coverage — avoids needing --cov on every invocation.
# Override with: pytest --no-cov to skip.
addopts = "--cov=proxmox-bootstrap --cov-branch --cov-report=term-missing -q"
# Note: pytest-ruff and pytest-bandit plugins were evaluated but not wired in:
# - pytest-ruff: requires ruff.toml config integration; prefer explicit ruff CLI
# - pytest-bandit: not actively maintained; bandit runs via run-static-audit.sh
# Both tools run in Tier 1 (tools/run-static-audit.sh) and have dedicated test coverage.

# Audit finding fix (rounds 4/5): test files used sys.path.insert() to locate
# proxmox-bootstrap, doc-gen, and peer packages.  Declaring them here lets pytest
# inject all roots before any test module is collected, eliminating the need for
# per-file path manipulation.
pythonpath = [
    "proxmox-bootstrap",
    "doc-gen",
    "doc-gen/renderers",
    "data-model",
    "lib",
    "assessment/tier1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "S"]
ignore = [
    "S101",  # assert used in tests
    "S603",  # subprocess without shell=True is fine
    "S607",  # partial path to binary is fine for dev tools
    "E501",  # line too long — enforced via line-length above
    # Infrastructure false positives: variable/param names containing "password",
    # "secret", "token", etc. are not hardcoded credentials — they are references.
    "S105",  # hardcoded-password-string — false positive on passphrase/secret variable names
    "S106",  # hardcoded-password-func-arg — false positive on token/secret param names
    "S107",  # hardcoded-password-default — false positive on default value names
    # System scripts legitimately use /tmp for staging and restore operations.
    "S108",  # hardcoded-temp-file — /tmp is intentional in system admin scripts
    # Dashboard server and monitoring tools bind to all interfaces by design.
    "S104",  # hardcoded-bind-all-interfaces — intentional for service binding
    # System admin scripts require shell pipelines (e.g. kubectl | grep, ip link).
    "S602",  # subprocess-popen-with-shell-equals-true — required for system scripts
    # Silent exception handling is documented in backup and platform state collectors
    # to prevent cascading failures during non-critical probe operations.
    "S110",  # try-except-pass — intentional in resilient probe paths
    "S112",  # try-except-continue — intentional in resilient probe paths
    # Tests use random for data generation, not cryptography.
    "S311",  # suspicious-non-cryptographic-random-usage — test data generation only
    # CLI scripts in proxmox-bootstrap/ add their own directory to sys.path before
    # importing local modules (bootstrapped CLI pattern). E402 is expected and
    # intentional in this script-heavy infrastructure codebase.
    "E402",  # module-import-not-at-top-of-file — expected in CLI scripts and test setup
    # Compact multi-assignment on one line is used throughout for related property
    # updates (e.g. "obj.a = x; obj.b = y") and for inline type checks. This is
    # an intentional style in this infrastructure codebase.
    "E702",  # multiple-statements-on-one-line-semicolon — intentional compact style
    "E701",  # multiple-statements-on-one-line-colon — intentional compact style
]
exclude = ["proxmox-bootstrap/deprecated/", "new/"]

[tool.bandit]
exclude_dirs = ["tests", "proxmox-bootstrap/deprecated", "new"]
skips = ["B101", "B404", "B603", "B607"]

[tool.hypothesis]
# Fixed seed for CI determinism; override with --hypothesis-seed=0 to generate new cases.
deriving_seed = 0
suppress_health_check = ["too_slow"]

[tool.mutmut]
paths_to_mutate = "proxmox-bootstrap/"
tests_dir = "tests/"
# Exclude generated HTML and deprecated modules
runner = "python -m pytest -x --no-cov -q"
